Fix bug in header when name is too long

--- a/views/sass/style.scss
+++ b/views/sass/style.scss
@@ -334,10 +334,14 @@ textarea:focus, input:focus{
       text-shadow: 0 2px 0 rgba(0, 0, 0, 0.15);
       margin: 7px 0 0 0;
       padding: 3px 50px 0 10px;
-      float: left;
+      
       background-image: url(../img/team.png);
       background-repeat: no-repeat;
       background-position: right 0 ;
+      
+      position: absolute;
+      left: 125px;
+      top: 0;
       
       &:hover{
         text-shadow: 0 2px 2px rgba(0, 0, 0, 0.30);
